tty-egpf-monitor (0.4.1-1) unstable; urgency=medium

  * Initial release
  * Advanced serial port monitoring with eBPF technology
  * Dual-mode operation (active/passive monitoring)
  * Real-time data capture and analysis
  * eBPF-based packet filtering

 -- Adrian <adrian@example.com>  Mon, 26 Aug 2025 23:00:00 +0000