@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 13), clang, make, libelf-dev, zlib1g-dev, pkg-confi
 
 Package: tty-egpf-monitord
 Architecture: any
-Depends: ${misc:Depends}, libbpf0 (>= 1:0.5.0), libc6 (>= 2.34), adduser, libcap2-bin, libsystemd0
+Depends: ${misc:Depends}, libbpf1 (>= 1:0.5.0), libc6 (>= 2.34), adduser, libcap2-bin, libsystemd0
 Description: eBPF serial monitoring daemon with HTTP API
  A sophisticated real-time serial port monitoring tool that combines
  the power of eBPF (extended Berkeley Packet Filter) with intelligent
