@@ -9,6 +9,35 @@ case "$1" in
     install -d -m 0755 /run
     # Create log directory
     install -d -m 0755 /var/log/tty-egpf-monitor
+    
+    # Handle libbpf compatibility for Ubuntu 22.04
+    if [ -f /etc/os-release ] && grep -q "jammy" /etc/os-release; then
+      echo "Ubuntu 22.04 detected, checking libbpf compatibility..."
+      
+      # Check if we need to install newer libbpf
+      if ! ldconfig -p | grep -q "libbpf.so.1"; then
+        echo "Installing newer libbpf for Ubuntu 22.04 compatibility..."
+        
+        # Install build dependencies
+        apt-get update -qq
+        apt-get install -y --no-install-recommends git build-essential libelf-dev zlib1g-dev
+        
+        # Build and install newer libbpf
+        cd /tmp
+        git clone --depth 1 https://github.com/libbpf/libbpf.git
+        cd libbpf/src
+        make -j$(nproc) && make install
+        ldconfig
+        
+        # Clean up
+        cd /
+        rm -rf /tmp/libbpf
+        
+        echo "Newer libbpf installed successfully"
+      else
+        echo "libbpf.so.1 already available"
+      fi
+    fi
     # Set capabilities for eBPF access
     if command -v setcap >/dev/null 2>&1; then
       setcap cap_bpf,cap_perfmon,cap_net_admin+ep /usr/bin/tty-egpf-monitord || true
